# AdventOfCode

./: CMakeLists.txt
src/: CMakeLists.txt
src/2022/01/: main.cpp
src/2022/02/: header.hpp  main.cpp
src/2022/03/: main.cpp
src/2022/04/: main.cpp
src/2022/05/: main.cpp
src/2022/06/: main.cpp
src/2022/07/: main.cpp
